# loom

./: .env.example  .gitignore  .npmignore  .npmrc  AI_AGENT_PLATFORM.md  COMPARISON.md  CONFIGURATION_REVIEW.md  CONFIG_INTEGRATION_RULES.md  CONFIG_INTEGRATION_TESTING_PLAN.md  ComprehensiveGraphDBAndSharedStateImplementation TODO List.md  ContextGraphOverview.md  DECISION_TRACE_IMPLEMENTATION_PLAN.md  IMMER_INTEGRATION.md  IMMER_MIGRATION_COMPLETE.md  LoomInitialConversation.md  MIGRATION_GUIDE_FOR_AI.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  PHASE5_COMPLETE.md  PHASE7A_PROGRESS.md  PHASE7_ROADMAP.md  PIPELINE_PRIMITIVES_REVIEW.md  PLAN.md  README.md  RECOVERY_ARCHITECTURE.md  SECTION6_SUMMARY.md  THIRD_COMPREHENSIVE_REVIEW.md  actors.config.example.yaml  actors.config.json  docker-compose.yml  loom.config.decision-traces.yaml  loom.config.example.yaml  loom.config.test.yaml  node-runner.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts
assembly/: calculator-actor.ts  composite-loan-engine.ts  echo.ts
demos/: coordination-example.ts  studio-live-demo.ts  test-actor-config.ts  test-adapter-factory.ts  test-backward-compat.ts  test-config.ts  test-coordination.ts  test-observability.ts  test-simple-state.ts  test-task.ts  test-tracing.ts
docker/: relay.js
docs/: ACTOR_MEMORY_INTEGRATION.md  ACTOR_METADATA_COMPLETE.md  AZURE_DEPLOYMENT.md  AZURE_DISTRIBUTED_TIME.md  CLAUDE_AGENTS_ANALYSIS.md  CLAUDE_FEATURES_IMPLEMENTATION.md  COMPREHENSIVE_VERIFIABLE_AGENT_PLATFORM.md  DAPR_VS_LOOM_CLARIFICATION.md  DECISION_TRACE_IMPLEMENTATION.md  DISTRIBUTED_RUNTIME_IMPLEMENTATION_PLAN.md  DISTRIBUTED_TIME_ANALYSIS.md  DYNAMIC_CONFIG.md  ENHANCEMENT_EVALUATION.md  ENHANCEMENT_IMPLEMENTATION_PLAN.md  FEDERATED_SYSTEM_ARCHITECTURE.md  FINALIZE_PHASE_PLAN.md  (+54 more)
rust/: Cargo.toml  README.md
rust/.cargo/: config.toml
rust/tlsn-verifier/: Cargo.toml  README.md
rust/tlsn-verifier/src/: lib.rs
rust/tlsn-verifier/tests/: verify_test.rs
(+538 files in other folders)
