[workspace]
resolver = "2"
members = [
    "tlsn-verifier",
]

[workspace.dependencies]
# TLS Notary dependencies
tlsn-core = { git = "https://github.com/tlsnotary/tlsn", rev = "1801c30" }
tlsn-formats = { git = "https://github.com/tlsnotary/tlsn", rev = "1801c30" }

# WASM bindings
wasm-bindgen = "0.2"
js-sys = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

[profile.release]
# Optimize for small WASM size
opt-level = "z"           # Optimize for size
lto = true                # Link-time optimization
codegen-units = 1         # Better optimization
panic = "abort"           # Smaller binaries
strip = true              # Remove symbols

[profile.dev]
# Faster compile times during development
opt-level = 0
debug = true
